k8s/server/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app: server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - image: vetalb60/server:0.7
          name: server
          ports:
            - containerPort: 80
              protocol: TCP
