k8s/server/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-lb
  labels:
    app: server
spec:
  type: LoadBalancer
  ports:
    - port: 30777
      targetPort: 30777
      protocol: TCP
  selector:
    app: server
